--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ Flake8:
   stage: code checks
   script:
     - pip install flake8
-    - flake8 adapters/ core/ collecttion_editor/
+    - flake8 adapters/ core/ collection_editor/
 
 Build docker dev image:
     image: 
