--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,57 @@
 image: python:3.8-alpine
 
+before_script:
+    - apt update
+    - apt install git python3-dev libpq-dev libsasl2-dev build-essential gcc -y
+    - pip install -U pip
+    - pip install --ignore-installed -r requirements.txt
+
 stages:
+    - sonarqube
     - code checks
     - build
 
+sonarqube:
+    image: sonarsource/sonar-scanner-cli
+    stage: sonarqube
+    before_script: []
+    script:
+        - sonar-scanner -Dsonar.projectKey=CollectionEditor -Dsonar.sources=. -Dsonar.host.url=https://sonarqube.whiteaster.com -Dsonar.login=3c1c5d7aec1288650be47427f18a5990e94024eb
+    only:
+        - master
+
 Flake8:
-  stage: code checks
-  script:
-    - pip install flake8
-    - flake8 core/ collection_editor/
+    stage: code checks
+    script:
+        - pip install flake8
+        - flake8 core/ collection_editor/
+
+PyLint:
+    stage: code checks
+    allow_failure: true
+    script:
+        - pip install pylint pylint_django
+        - pylint --rcfile ./.pylintrc collection_editor core
+
+Piprot:
+    stage: code checks
+    allow_failure: true
+    script:
+        - pip install piprot
+        - piprot
+
+PipCheck:
+    stage: code checks
+    allow_failure: true
+    script:
+        - pip check
+
+Safety:
+    stage: code checks
+    allow_failure: true
+    script:
+        - pip install safety
+        - safety check -r requirements.txt
 
 Build docker dev image:
     image: 
