--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
 image: python:3.8-alpine
 
 before_script:
-    - apt update
-    - apt install git python3-dev libpq-dev libsasl2-dev build-essential gcc -y
+    - apk add --no-cache git python3-dev gcc musl-dev postgresql-dev build-base
     - pip install -U pip
     - pip install --ignore-installed -r requirements.txt
 
