--- a/example.env
+++ b/example.env
@@ -11,3 +11,10 @@ MONGO_ENGINE=djongo
 MONGO_DATABASE=collection_editor
 MONGO_USER=ce_user
 MONGO_PASSWORD=ce_password
+
+# LDAP
+LDAP_HOST='ldap://ldap.forumsys.com'
+LDAP_USERNAME='cn=read-only-admin,dc=example,dc=com'
+LDAP_PASSWORD='password'
+LDAP_SEARCH_HOST=''
+LDAP_FORMAT='sAMAccountName'
