--- a/example.env
+++ b/example.env
@@ -7,7 +7,6 @@ DB_USER=ce_user
 DB_PASSWORD=ce_password
 
 MONGO_HOST=ce_mongo
-MONGO_ENGINE=djongo
 MONGO_DATABASE=collection_editor
 MONGO_USER=ce_user
 MONGO_PASSWORD=ce_password
@@ -18,3 +17,6 @@ LDAP_USERNAME='cn=read-only-admin,dc=example,dc=com'
 LDAP_PASSWORD='password'
 LDAP_SEARCH_HOST=''
 LDAP_FORMAT='sAMAccountName'
+
+DATAVERSE_URL=https://dataverse.whiteaster.com/
+DATAVERSE_ACCESS_TOKEN=9c9d2213-482d-405d-9490-96b984b96898
