Permissions with JWT token auth

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 DEBUG=True
 
+DB_NAME=collection_editor
 DB_HOST=ce_db
 DB_ENGINE=postgres
 DB_DATABASE=collection_editor
@@ -18,5 +19,5 @@ LDAP_PASSWORD='password'
 LDAP_SEARCH_HOST=''
 LDAP_FORMAT='sAMAccountName'
 
-DATAVERSE_URL=https://dataverse.whiteaster.com/
+DATAVERSE_URL=https://dataverse.whiteaster.com
 DATAVERSE_ACCESS_TOKEN=9c9d2213-482d-405d-9490-96b984b96898
