--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,9 @@ services:
       - ./:/app/
     env_file:
       - .env
+    # TODO: Delete after test development
+    environment:
+      - TESTING=True
     labels:
       - traefik.enable=true
       - traefik.http.routers.ce_backend.rule=Host(`${URL}`)
