--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django==2.2.13
 djangorestframework==3.11.0
 
 django-filter==2.3.0
+djangorestframework-simplejwt==4.4.0
+dry-rest-permissions==0.1.10
 python-dotenv==0.13.0
 pymongo~=3.10.1
 pandas~=1.0.5
