--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ variables:
   MONGO_PORT: 27017
 
 before_script:
-    - apk add --no-cache git python3-dev gcc musl-dev postgresql-dev build-base openldap-dev
+    - apt install --no-cache git python3-dev gcc musl-dev postgresql-dev build-base openldap-dev
     - pip install -U pip
     - pip install --ignore-installed -r requirements.txt
 
