--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
 
 before_script:
     - apt-get update 
-    - apt-get install gcc git build-essential libsasl2-dev python3-dev libldap2-dev libssl-dev ldap-utils
+    - apt-get install -y gcc git build-essential libsasl2-dev python3-dev libldap2-dev libssl-dev ldap-utils
     - pip install -U pip
     - pip install --ignore-installed -r requirements.txt
 
