--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,8 @@ Safety:
 Sphinx documentation development:
     stage: documentation
     before_script:
-        - apk add make postgresql-libs gcc musl-dev postgresql-dev python3-dev git
+        - apt-get update
+        - apt-get install gcc musl-dev python3-dev git
         - pip install -r requirements.txt
         - pip install sphinx sphinx_rtd_theme sphinx-autodoc-typehints
     script:
@@ -92,7 +93,8 @@ Sphinx documentation development:
 Sphinx documentation:
     stage: documentation
     before_script:
-        - apk add make postgresql-libs gcc musl-dev postgresql-dev python3-dev git
+        - apt-get update
+        - apt-get install gcc musl-dev python3-dev git
         - pip install -r requirements.txt
         - pip install sphinx sphinx_rtd_theme sphinx-autodoc-typehints
     script:
