--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,7 @@ Sphinx documentation:
     stage: documentation
     before_script:
         - apt-get update
-        - apt-get install gcc musl-dev python3-dev git
+        - apt-get install -y gcc musl-dev python3-dev git
         - pip install -r requirements.txt
         - pip install sphinx sphinx_rtd_theme sphinx-autodoc-typehints
     script:
