--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.11.0
 django-filter==2.3.0
 djangorestframework-simplejwt==4.4.0
 dry-rest-permissions==0.1.10
+gunicorn==20.0.4
 python-dotenv==0.13.0
 pymongo~=3.10.1
 pandas~=1.0.5
